# CONSTRUCTION_MANAGEMENT

./: .gitattributes  .gitignore  DEPLOYMENT.md  DOCKER_TROUBLESHOOTING.md  HTTPS_설정_가이드.md  INSTALL.md  INTEGRATION_GUIDE.md  NGROK_설정_가이드.md  PWA_설정_가이드.md  PWA_설치_문제해결.md  PWA_설치_체크리스트.md  QUICK_START.md  README.md  README_DEPLOY.md  deploy.bat  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.windows.yml  docker-compose.yml  fix-port-conflict.sh  generate_icons.py  ngrok_빠른_해결.md  setup-https-docker.sh  start.bat  start.sh  간단_실행_가이드.md  데이터베이스_백업_가이드.md  레포지토리_이름_추천.md  로컬_테스트_가이드.md  배포_실행_방법.md  코드_변경_반영_가이드.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  backup_db.py  crontab  main.py  migrate.bat  migrate.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  start.sh  start_backend.bat  마이그레이션_가이드.md
backend/app/: database.py  init_data.py  migrations.py  security.py  services.py  version.py
backend/app/models/: __init__.py  equipment_record.py  team.py  user.py  work_record.py  worker.py
backend/app/routers/: __init__.py  auth.py  equipment_records.py  teams.py  users.py  work_records.py  workers.py
backend/app/schemas/: __init__.py  equipment_record.py  team.py  user.py  work_record.py  worker.py
frontend/: .dockerignore  Dockerfile  PWA_아이콘_생성_가이드.md  README.md  index.html  nginx-ssl.conf  nginx.conf  package-lock.json  package.json  todo.md  vite.config.ts  아이콘_생성_스크립트.md  아이콘_생성_안내.md
frontend/public/: generate-icons.html  manifest.json
frontend/scripts/: create-simple-icons.sh  (+1 more)
(+15 files in other folders)
